<resources>
    <string name="app_name">AlertaFogo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="info">Informação</string>
    <string name="login">Iniciar Sessão</string>
    <string name="registo">Registar</string>
    <string name="convidado">Entrar sem iniciar sessão</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmarPassword">Confirmar Password</string>
    <string name="lembrarPassword">Não se lembra da password?</string>
    <string name="entrar">Entrar</string>
    <string name="semConta">Ainda não tem conta? Registar</string>
    <string name="comConta">Já tem conta? Entrar</string>
    <string name="registoNome">Nome Completo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>