<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:background="#1A1A1A">

    <!-- Espaço -->
    <ImageView
        android:layout_width="336dp"
        android:layout_height="254dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_fire" />

    <!-- Botão Quem Somos -->

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/info"
        android:textColor="#FFFFFF"
        android:backgroundTint="#444444"
        android:textSize="16sp" />


    <!-- Botão Iniciar Sessão -->
    <Button
        android:id="@+id/btnIniciarSessao"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#FF5722"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <!-- Botão Registo -->
    <Button
        android:id="@+id/btnRegisto"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/registo"
        android:textColor="#FF5722"
        android:backgroundTint="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="12dp" />

    <!-- Botão Convidado -->
    <TextView
        android:id="@+id/btnConvidado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convidado"
        android:textColor="#AAAAAA"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>